# swagger/swagger-api-v1.yaml
@@ -25,7 +25,72 @@ tags:
 - name: monitoring
   description: Monitor for the app
 paths:
+  /employee/page/{page}/size/{size}:
+    get:
+      tags:
+      - employee
+      summary: Get all employees
+      description: Fetch all employees from the data store as JSON Array
+      operationId: getAllEmployee
+      parameters:
+      - name: page
+        in: path
+        description: page number of result
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: size
+        in: path
+        description: size of employees of result
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Employee'
+        400:
+          description: Invalid status value
+          content: {}
+      security:
+      - petstore_auth:
+        - write:pets
+        - read:pets
   /employee:
+    post:
+      tags:
+      - employee
+      summary: Add a new employee to the store
+      operationId: addEmployee
+      requestBody:
+        description: employee object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Employee'
+        required: true
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Employee'  
+        405:
+          description: Invalid input
+          content: {}
+      security:
+      - petstore_auth:
+        - write:pets
+        - read:pets
+      x-codegen-request-body-name: body
     put:
       tags:
       - employee
@@ -59,55 +124,6 @@ paths:
         - write:pets
         - read:pets
       x-codegen-request-body-name: body
-    post:
-      tags:
-      - employee
-      summary: Add a new employee to the store
-      operationId: addEmployee
-      requestBody:
-        description: employee object that needs to be added to the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Employee'
-        required: true
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Employee'  
-        405:
-          description: Invalid input
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      x-codegen-request-body-name: body
-    get:
-      tags:
-      - employee
-      summary: Get all employees
-      description: Fetch all employees from the data store as JSON Array
-      operationId: getAllEmployee
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Employee'
-        400:
-          description: Invalid status value
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
   /employee/{employeeId}:
     get:
       tags:
@@ -118,7 +134,7 @@ paths:
       parameters:
       - name: employeeId
         in: path
-        description: ID of pet to return
+        description: ID of employee to return
         required: true
         schema:
           type: integer
@@ -158,7 +174,72 @@ paths:
         404:
           description: Employee not found
           content: {}
+  /department/page/{page}/size/{size}:
+    get:
+      tags:
+      - department
+      summary: Get all departments
+      description: Fetch all employees from the data store as JSON Array
+      operationId: getAllDepartment
+      parameters:
+      - name: page
+        in: path
+        description: page number of result
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: size
+        in: path
+        description: size of department of result
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Department'
+        400:
+          description: Invalid status value
+          content: {}
+      security:
+      - petstore_auth:
+        - write:pets
+        - read:pets
   /department:
+    post:
+      tags:
+      - department
+      summary: Add a new department to the store
+      operationId: addDepartment
+      requestBody:
+        description: department object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Department'
+        required: true
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Department'
+        405:
+          description: Invalid input
+          content: {}
+      security:
+      - petstore_auth:
+        - write:pets
+        - read:pets
+      x-codegen-request-body-name: body
     put:
       tags:
       - department
@@ -192,55 +273,6 @@ paths:
         - write:pets
         - read:pets
       x-codegen-request-body-name: body
-    post:
-      tags:
-      - department
-      summary: Add a new department to the store
-      operationId: addDepartment
-      requestBody:
-        description: department object that needs to be added to the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Department'
-        required: true
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Department'
-        405:
-          description: Invalid input
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      x-codegen-request-body-name: body
-    get:
-      tags:
-      - department
-      summary: Get all departments
-      description: Fetch all employees from the data store as JSON Array
-      operationId: getAllDepartment
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Department'
-        400:
-          description: Invalid status value
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
   /department/{departmentId}:
     get:
       tags:
@@ -338,8 +370,6 @@ components:
         departmentId:
           type: integer
           format: int64
-        department:
-          $ref: '#/components/schemas/Department'
     Department:
       required:
       - departmentName
@@ -355,8 +385,6 @@ components:
         managerId:
           type: integer
           format: int64
-        manager:
-          $ref: '#/components/schemas/Employee'
   securitySchemes:
     petstore_auth:
       type: oauth2
